bunch of little fixes to size, positioning, wrapping, and text

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -188,6 +188,10 @@ h3 {
   color: #aaaaaa;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 .undecorated_stack {
   list-style: none;
   padding: 0px;
